--- a/alexandria/app/src/main/AndroidManifest.xml
+++ b/alexandria/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -39,7 +40,7 @@
             android:exported="false" />
         <service
             android:name=".services.BookService"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
