--- a/Football_Scores/app/src/main/AndroidManifest.xml
+++ b/Football_Scores/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="barqsoft.footballscores">
 
-    <uses-permission
-        android:name="android.permission.INTERNET"
-        android:maxSdkVersion="22" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,9 +20,9 @@
         </activity>
 
         <provider
-            android:name=".ScoresProvider"
+            android:name=".ScoreProvider"
             android:authorities="barqsoft.footballscores"
-            android:exported="false"/>
+            android:exported="false" />
         <receiver
             android:name=".widgets.ScoresWidgetProvider"
             android:enabled="true"
