Renaming twice to fix the filename and classname to be in sync in git

--- a/Football_Scores/app/src/main/AndroidManifest.xml
+++ b/Football_Scores/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <provider
-            android:name=".ScoreProvider"
+            android:name=".ScoresProvider"
             android:authorities="barqsoft.footballscores"
             android:exported="false" />
         <receiver
